--- a/angular.json
+++ b/angular.json
@@ -49,7 +49,8 @@
             "aot": true,
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/ajs/bundle.js"
             ],
             "styles": [
               "src/styles.scss"
