--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
+    "dev": "concurrently --kill-others \"webpack --watch\" \"ng serve\"",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
@@ -30,6 +31,7 @@
     "@angular/cli": "~10.2.0",
     "@angular/compiler-cli": "~10.2.0",
     "@types/node": "^12.11.1",
+    "concurrently": "^5.3.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.0.2",
