--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@angular-devkit/build-angular": "~0.1002.0",
     "@angular/cli": "~10.2.0",
     "@angular/compiler-cli": "~10.2.0",
+    "@types/angular": "^1.8.0",
+    "@types/angular-ui-router": "^1.1.40",
     "@types/node": "^12.11.1",
     "concurrently": "^5.3.0",
     "ts-node": "~8.3.0",
