--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "dev": "concurrently --kill-others \"webpack --watch\" \"ng serve\"",
-    "start": "ng serve",
+    "start:standalone": "ng serve -c standalone",
+    "start:hybrid": "concurrently --kill-others \"webpack --watch\" \"ng serve -c hybrid\"",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint"
