--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/angular-ui-router": "^1.1.40",
     "@types/node": "^12.11.1",
     "concurrently": "^5.3.0",
+    "html-loader": "^1.3.2",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.0.2",
