--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start:standalone": "ng serve -c standalone",
-    "start:hybrid": "concurrently --kill-others \"webpack --watch\" \"ng serve -c hybrid\"",
+    "start": "ng serve",
+    "start:hybrid": "concurrently --kill-others \"rollup --config --watch\" \"ng serve -c hybrid\"",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint"
@@ -22,6 +22,7 @@
     "@angular/upgrade": "^10.2.3",
     "@uirouter/angularjs": "^1.0.28",
     "angular": "^1.8.2",
+    "oclazyload": "^1.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -34,10 +35,10 @@
     "@types/angular-ui-router": "^1.1.40",
     "@types/node": "^12.11.1",
     "concurrently": "^5.3.0",
-    "html-loader": "^1.3.2",
+    "rollup": "^2.34.0",
+    "rollup-plugin-html": "^0.2.1",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2",
-    "webpack-cli": "^4.2.0"
+    "typescript": "~4.0.2"
   }
 }
